--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "rss-aggregator",
+  "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/WhereIU/frontend-project-11/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/WhereIU/frontend-project-11/actions)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,16 @@
   "bugs": {
     "url": "https://github.com/WhereIU/frontend-project-11/issues"
   },
-  "homepage": "https://github.com/WhereIU/frontend-project-11#readme"
+  "homepage": "https://github.com/WhereIU/frontend-project-11#readme",
+  "dependencies": {
+    "babel": "^5.8.38",
+    "bootstrap": "^5.3.8"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.32.0",
+    "jest": "^29.7.0",
+    "vite": "^7.2.2"
+  }
 }
