--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.32.0",
     "jest": "^29.7.0",
+    "sass-embedded": "^1.93.3",
     "vite": "^7.2.2"
   }
 }
